tests/bad/maxint.nx
var x : int = maxint + 1